k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: frontend-ingress
  namespace: fullstack-local

spec:
  ingressClassName: nginx

  rules:
    - host: localhost

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: frontend
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: backend-ingress
  namespace: fullstack-local
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  ingressClassName: nginx

  rules:
    - host: localhost

      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific

            backend:
              service:
                name: backend
                port:
                  number: 8000
